// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatchBuilder root changes array root array root - description change on root 1`] = `
[
  {
    "fieldName": "",
    "patch": {
      "op": "replace",
      "path": "",
      "value": {
        "description": "Array of strings",
        "items": {
          "default": "",
          "type": "string",
        },
        "type": "array",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "description",
        "to": "Array of strings",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder root changes array root array root - items default value change 1`] = `
[
  {
    "fieldName": "[*]",
    "patch": {
      "op": "replace",
      "path": "/items",
      "value": {
        "default": "new",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": "old",
        "property": "default",
        "to": "new",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder root changes array root array root with object items - add field to items 1`] = `
[
  {
    "fieldName": "[*].new",
    "patch": {
      "op": "add",
      "path": "/items/properties/new",
      "value": {
        "default": "",
        "type": "string",
      },
    },
    "propertyChanges": [],
  },
]
`;

exports[`PatchBuilder root changes array root array root with object items - remove field from items 1`] = `
[
  {
    "fieldName": "[*].fieldA",
    "patch": {
      "op": "remove",
      "path": "/items/properties/fieldA",
    },
    "propertyChanges": [],
  },
]
`;

exports[`PatchBuilder root changes array root array root with object items - rename field in items 1`] = `
[
  {
    "fieldName": "[*].newName",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/items/properties/oldName",
      "op": "move",
      "path": "/items/properties/newName",
    },
    "propertyChanges": [],
  },
]
`;

exports[`PatchBuilder root changes array root array root with primitive items - no changes 1`] = `[]`;

exports[`PatchBuilder root changes nested arrays array of arrays - inner items change 1`] = `
[
  {
    "fieldName": "[*][*]",
    "patch": {
      "op": "replace",
      "path": "/items/items",
      "value": {
        "default": "new",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": "old",
        "property": "default",
        "to": "new",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder root changes nested arrays array of arrays - no changes 1`] = `[]`;

exports[`PatchBuilder root changes nested arrays array of arrays of objects - add field to innermost object 1`] = `
[
  {
    "fieldName": "[*][*].new",
    "patch": {
      "op": "add",
      "path": "/items/items/properties/new",
      "value": {
        "default": "",
        "type": "string",
      },
    },
    "propertyChanges": [],
  },
]
`;

exports[`PatchBuilder root changes nested arrays array of arrays of objects - remove field from innermost object 1`] = `
[
  {
    "fieldName": "[*][*].fieldA",
    "patch": {
      "op": "remove",
      "path": "/items/items/properties/fieldA",
    },
    "propertyChanges": [],
  },
]
`;

exports[`PatchBuilder root changes nested arrays array of arrays of objects - rename field in innermost object 1`] = `
[
  {
    "fieldName": "[*][*].newName",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/items/items/properties/oldName",
      "op": "move",
      "path": "/items/items/properties/newName",
    },
    "propertyChanges": [],
  },
]
`;

exports[`PatchBuilder root changes object root generates replace patch when root deprecated changes 1`] = `
[
  {
    "fieldName": "",
    "patch": {
      "op": "replace",
      "path": "",
      "value": {
        "additionalProperties": false,
        "deprecated": true,
        "properties": {
          "name": {
            "default": "",
            "type": "string",
          },
        },
        "required": [
          "name",
        ],
        "type": "object",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "deprecated",
        "to": true,
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder root changes object root generates replace patch when root description changes 1`] = `
[
  {
    "fieldName": "",
    "patch": {
      "op": "replace",
      "path": "",
      "value": {
        "additionalProperties": false,
        "description": "New root description",
        "properties": {
          "name": {
            "default": "",
            "type": "string",
          },
        },
        "required": [
          "name",
        ],
        "type": "object",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "description",
        "to": "New root description",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder root changes primitive root boolean root - deprecated change 1`] = `
[
  {
    "fieldName": "",
    "patch": {
      "op": "replace",
      "path": "",
      "value": {
        "default": false,
        "deprecated": true,
        "type": "boolean",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "deprecated",
        "to": true,
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder root changes primitive root number root - default value change 1`] = `
[
  {
    "fieldName": "",
    "patch": {
      "op": "replace",
      "path": "",
      "value": {
        "default": 42,
        "type": "number",
      },
    },
    "propertyChanges": [
      {
        "from": 0,
        "property": "default",
        "to": 42,
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder root changes primitive root string root - default value change 1`] = `
[
  {
    "fieldName": "",
    "patch": {
      "op": "replace",
      "path": "",
      "value": {
        "default": "new",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": "old",
        "property": "default",
        "to": "new",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder root changes primitive root string root - description change 1`] = `
[
  {
    "fieldName": "",
    "patch": {
      "op": "replace",
      "path": "",
      "value": {
        "default": "hello",
        "description": "A string value",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "description",
        "to": "A string value",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder root changes primitive root string root - no changes 1`] = `[]`;
